--- a/Client/ClientTN/ClientTN.csproj
+++ b/Client/ClientTN/ClientTN.csproj
@@ -123,6 +123,9 @@
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formmanagement.resx">
+      <DependentUpon>Formmanagement.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
